--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "stripe": "^16.10.0"
   }
 }
