--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "nodemailer": "^6.9.15",
     "stripe": "^16.10.0"
   }
 }
