--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "nodemailer": "^6.9.15",
+    "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^16.10.0"
   }
 }
