--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.20.0",
     "nodemailer": "^6.9.15",
     "sib-api-v3-sdk": "^8.5.0",
-    "stripe": "^16.10.0"
+    "stripe": "^16.10.0",
+    "twilio": "^5.4.0"
   }
 }
