--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "nodemailer": "^6.9.15",
+    "resend": "^4.1.1",
     "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^16.10.0",
     "twilio": "^5.4.0"
