--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "nodemailer": "^6.9.15",
+    "openai": "^4.84.0",
     "resend": "^4.1.1",
     "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^16.10.0",
