--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai": "^4.84.0",
     "resend": "^4.1.1",
     "sib-api-v3-sdk": "^8.5.0",
+    "socket.io": "^4.8.1",
     "stripe": "^16.10.0",
     "twilio": "^5.4.0"
   }
