--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
     "stripe": "^16.10.0",
-    "twilio": "^5.4.0"
+    "twilio": "^5.4.0",
+    "web-push": "^3.6.7"
   }
 }
