--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
+    "gopd": "^1.2.0",
     "nodemailer": "^6.9.15",
     "openai": "^4.84.0",
     "resend": "^4.1.1",
