--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "gopd": "^1.0.1",
     "nodemailer": "^6.9.15",
     "openai": "^4.84.0",
