--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
+    "gopd": "^1.0.1",
     "nodemailer": "^6.9.15",
     "openai": "^4.84.0",
     "qs": "^6.11.2",
