--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^2.48.0",
-    "body-parser": "^1.20.3",
+    "@supabase/supabase-js": "^2.49.4",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "debug": "^4.4.0",
+    "debug": "^4.4.1",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
+    "extend-node": "^0.0.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "nodemailer": "^6.9.15",
-    "openai": "^4.84.0",
-    "resend": "^4.1.1",
+    "gopd": "^1.2.0",
+    "nodemailer": "^6.10.1",
+    "openai": "^4.98.0",
+    "qs": "^6.13.0",
+    "resend": "^4.5.1",
     "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
-    "stripe": "^16.10.0",
-    "twilio": "^5.4.0",
+    "stripe": "^16.12.0",
+    "twilio": "^5.6.1",
     "web-push": "^3.6.7"
   }
 }
