--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/index.js"
@@ -16,11 +19,11 @@
     "cors": "^2.8.5",
     "debug": "^4.4.1",
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
+    "express": "4.18.2",
     "extend-node": "^0.0.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "gopd": "^1.2.0",
+    "gopd": "1.0.1",
     "nodemailer": "^6.10.1",
     "openai": "^4.98.0",
     "qs": "^6.13.0",
