--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/index.js",
-    "vercel-build": "npm install",
-    "postinstall": "npm rebuild"
+    "vercel-build": "npm install"
   },
   "keywords": [],
   "author": "",
