--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@supabase/supabase-js": "^2.49.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "debug": "^4.4.1",
+    "debug": "^4.3.4",
     "dotenv": "^16.5.0",
-    "express": "4.18.2",
+    "express": "^4.18.2",
     "extend-node": "^0.0.1",
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
@@ -28,7 +28,7 @@
     "iconv-lite": "^0.6.3",
     "nodemailer": "^6.10.1",
     "openai": "^4.98.0",
-    "qs": "^6.13.0",
+    "qs": "^6.11.2",
     "resend": "^4.5.1",
     "sib-api-v3-sdk": "^8.5.0",
     "socket.io": "^4.8.1",
