--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "api/index.js",
       "use": "@vercel/node",
       "config": {
-        "nodeVersion": "18.x"
+        "nodeVersion": "18.x",
+        "includeFiles": "node_modules/debug/src/common.js"
       }
     }
   ],
