--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "googleapis": "^148.0.0",
     "gopd": "^1.0.1",
     "iconv-lite": "^0.6.3",
+    "luxon": "^3.6.1",
     "nodemailer": "^6.10.1",
     "openai": "^4.98.0",
     "qs": "^6.11.2",
