--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/index.js",
-    "build": "npm install",
+    "build": "node api/index.js",
     "vercel-build": "npm install"
   },
   "keywords": [],
