--- a/vercel.json
+++ b/vercel.json
@@ -5,24 +5,15 @@
       "src": "api/index.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": [
-          "api/**/*",
-          "node_modules/**/*"
-        ]
+        "nodeVersion": "18.x",
+        "includeFiles": "node_modules/debug/src/common.js"
       }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/(.*)",
       "dest": "api/index.js"
     }
-  ],
-  "functions": {
-    "api/index.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
-  "buildCommand": "npm run build"
+  ]
 }
