--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
     "socket.io": "^4.8.1",
     "stripe": "^16.12.0",
     "twilio": "^5.6.1",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "puppeteer": "^21.5.2",
+    "sharp": "^0.33.0",
+    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.6.2",
+    "url-parse": "^1.5.10",
+    "image-size": "^1.1.1"
   },
   "peerDependencies": {
     "node": ">=18.0.0"
