--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/index.js",
     "build": "node api/index.js",
-    "vercel-build": "npm install"
+    "vercel-build": "npm install && npm run build"
   },
   "keywords": [],
   "author": "",
